[package]
name = "arc-pleiades-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-pleiades  = { path = ".." }
wasm-bindgen  = "0.2"
serde         = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand_chacha   = "0.3"
rand_core     = { version = "0.6", default-features = false }
midnight-curves = "0.3"
ff            = "0.13"
group         = "0.13"
serde_json    = "1"
hex           = "0.4"
sha2          = "0.10"

[profile.release]
opt-level     = "s"
lto           = true
